Fix gap on scores

--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,6 @@ body {
 .scores {
   font-size: 2rem;
   display: flex;
-  gap: 30rem;
   padding: 0px 1rem;
   justify-content: space-between;
 }
